--- a/微云网盘/css/style.css
+++ b/微云网盘/css/style.css
@@ -2,7 +2,7 @@
 * @Author: shen
 * @Date:   2017-08-02 17:16:38
 * @Last Modified by:   shen
-* @Last Modified time: 2017-08-08 17:20:34
+* @Last Modified time: 2017-08-10 00:09:07
 */
 body,p,h1,h2,h3,h4,h5,h6,dl,dd{
 	margin:0;
@@ -53,7 +53,16 @@ input,fieldset,textarea{
 body{
 	background: #fff;
 }
-
+.newArea{
+	width: 0px;
+	height: 0px;
+	background: #6e2;
+	opacity: .3;
+	border: 1px dashed #000;
+	position: absolute;
+	left: 0;
+	top: 0;	
+}
 .topInfo{
 	height: 70px;
 	padding: 0 20px;
@@ -306,6 +315,9 @@ body{
 	float: left;
 	margin: 15px 30px 0 15px;
 }
+.content .right .page-list .chooseActive{
+	background: url(../images/choose.png) no-repeat center center #55addc;
+}
 .content .page-list .pages{
 	float: left;
 }
@@ -374,11 +386,11 @@ body{
 	background: url(../images/doc-icon.png) no-repeat center 34px #fff;
 	margin: 40px;
 }
-.content .right .doc-list li:hover{
+.content .right .doc-list li:hover,.content .right .doc-list .active{
 	border-color: #55addc; 
 }
 .content .right .doc-list li:hover span{
-	visibility: visible;
+	visibility: visible!important;
 }
 .content .right .doc-list span{
 	display: block;
@@ -389,7 +401,7 @@ body{
 	visibility: hidden;
 }
 .content .right .doc-list .doc-choose{
-	background: url(../images/choose.png) no-repeat center center #55addc;
+	background: url(../images/choose.png) no-repeat center center #55addc!important;
 }
 .content .right .doc-list strong{
 	display: block;
@@ -525,3 +537,100 @@ body{
 	top: 200px;
 }
 
+.tipBox{
+	padding: 0 24px 0 52px;
+	height: 120px;
+	font-size: 14px;
+	color: #fff;
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: none;
+}
+.tipBox .tipTimeOut,.tipBox .tipDelSuccess,.tipBox .tipSelectFile{
+	padding: 0 24px 0 52px;
+	height: 40px;
+	line-height: 40px;	
+	position: relative;
+	border-radius: 20px 20px;
+}
+.tipBox .tipTimeOut{
+	background: rgba(235,107,107,0.8);
+}
+.tipBox .tipTimeOut i{
+	width: 24px;
+	height: 24px;
+	background: url(../images/tip.png) no-repeat 0 -48px;
+	position: absolute;
+	left: 20px;
+	top: 8px;
+}
+.tipBox .tipDelSuccess{
+	background: #86ce8b;
+}
+.tipBox .tipDelSuccess i{
+	width: 24px;
+	height: 24px;
+	background: url(../images/tip.png) no-repeat 0 -24px;
+	position: absolute;
+	left: 20px;
+	top: 8px;
+}
+.tipBox .tipSelectFile{
+	background: #f3a960;
+}
+.tipBox .tipSelectFile i{
+	width: 24px;
+	height: 24px;
+	background: url(../images/tip.png) no-repeat 0 0;
+	position: absolute;
+	left: 20px;
+	top: 8px;
+}
+
+.warnTip{}
+.warnTip .tipDel{
+	width: 316px;
+	height: 176px;
+	border: 2px solid #55addc;
+	border-radius: 10px;
+	background: url(../images/tipDel.png) no-repeat 34px 42px;
+	position: relative;
+	display: none;
+}
+.warnTip .tipDel h3{
+	font-size: 16px;
+	color: #000;
+	margin: 40px 0 16px;
+	text-indent: 90px;
+}
+.warnTip .tipDel .info{
+	font-size: 12px;
+	color: #000;
+	text-indent: 86px;
+}
+.warnTip .tipDel .btn{
+	width: 184px;
+	margin: 36px auto 0;
+}
+.warnTip .tipDel p a{
+	float: left;
+	width: 78px;
+	height: 28px;
+	line-height: 30px;
+	text-align: center;
+	border: 1px solid #55addc;
+}
+.warnTip .tipDel p a:nth-child(1){
+	margin-right: 24px;
+	background: #55addc;
+	color: #fff;
+}
+.warnTip .tipDel span{
+	width: 15px;
+	height: 15px;
+	background: url(../images/close.png) no-repeat;
+	position: absolute;
+	top: 15px;
+	right: 15px;
+}
