--- a/微云网盘/css/style.css
+++ b/微云网盘/css/style.css
@@ -2,7 +2,7 @@
 * @Author: shen
 * @Date:   2017-08-02 17:16:38
 * @Last Modified by:   shen
-* @Last Modified time: 2017-08-16 19:01:41
+* @Last Modified time: 2017-08-17 17:45:01
 */
 body,p,h1,h2,h3,h4,h5,h6,dl,dd{
 	margin:0;
@@ -600,32 +600,43 @@ body{
 	top: 8px;
 }
 
-.warnTip{}
-.warnTip .tipDel{
+.warnTip{
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.6);
+	position: absolute;
+	z-index: 9;
+	display: none;
+}
+.tipDel{
 	width: 316px;
 	height: 176px;
 	border: 2px solid #55addc;
 	border-radius: 10px;
-	background: url(../images/tipDel.png) no-repeat 34px 42px;
-	position: relative;
-	display: none;
+	background: url(../images/tipDel.png) no-repeat 34px 42px #fff;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -158px;
+	margin-top: -88px;
+	z-index: 10;
 }
-.warnTip .tipDel h3{
+.tipDel h3{
 	font-size: 16px;
 	color: #000;
 	margin: 40px 0 16px;
 	text-indent: 90px;
 }
-.warnTip .tipDel .info{
+.tipDel .info{
 	font-size: 12px;
 	color: #000;
 	text-indent: 86px;
 }
-.warnTip .tipDel .btn{
+.tipDel .btn{
 	width: 184px;
 	margin: 36px auto 0;
 }
-.warnTip .tipDel p a{
+.tipDel p a{
 	float: left;
 	width: 78px;
 	height: 28px;
@@ -633,12 +644,12 @@ body{
 	text-align: center;
 	border: 1px solid #55addc;
 }
-.warnTip .tipDel p a:nth-child(1){
+.tipDel p a:nth-child(1){
 	margin-right: 24px;
 	background: #55addc;
 	color: #fff;
 }
-.warnTip .tipDel span{
+.tipDel span{
 	width: 15px;
 	height: 15px;
 	background: url(../images/close.png) no-repeat;
@@ -646,3 +657,4 @@ body{
 	top: 15px;
 	right: 15px;
 }
+
